# PyOLXGUI

./: .gitignore  LICENSE  README.md  basis.ipynb  customlib.ipynb  dominate_tests.ipynb  h3-refine_NoSpherA2-extras.htm  h3-refine_NoSpherA2-occ-extras.htm  pyproject.toml  testing_complete_occ.ipynb  testing_complete_occ.py  tests.ipynb
components/: item_component.htm  item_component.py  row_component.htm  table.py  testing_complete_occ.ipynb
olx_gui/components/: item_component.py  table.py  tableOriginalComponents.py  tableRefactored.py
targets/: original.htm
tests/: sanity_test.py
tests/targets/: comp.htm
