[project]
name = "PyOLXGUI"
version = "0.1.0"
description = "PyOLXGUI is a simple Dominate based Python library for creating Olex2 GUI files"
requires-python = ">=3.10"
dependencies = [
    "dominate",
    "pygments>=2.19.1",
    "rich>=14.1.0",
]

[tool.uv.workspace]
members = ["olexpy"]

[tool.uv.sources]
dominate = { git = "https://github.com/MilitaoLucas/dominate.git" }
