[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "olx_gui"
version = "0.1.0"
description = "PyOLXGUI is a simple Dominate based Python library for creating Olex2 GUI files"
requires-python = ">=3.8"
dependencies = [
    "dominate",
    "pygments",
    "rich"
]

[tool.uv.sources]
dominate = { git = "https://github.com/MilitaoLucas/dominate.git"}
